# AegisEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
include/aegis/core/: awaiter.h  env.h  task.h
include/aegis/net/: socket.h
protocols/: CMakeLists.txt
protocols/internal/: common.proto
services/: CMakeLists.txt
services/gate/: main.cpp
src/: CMakeLists.txt
src/core/: env.cpp
